<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_list"
    style="@style/linear_layout_list">
    <LinearLayout
        android:id="@+id/book_info_list"
        style="@style/book_info_list">
        <TextView
            android:id="@+id/book_name"
            tools:text="@string/name_placeholder"
            style="@style/book_name" />
        <TextView
            android:id="@+id/book_price"
            tools:text="@string/price_placeholder"
            style="@style/book_price" />
        <TextView
            android:id="@+id/books_in_stock"
            tools:text="@string/stock_placeholder"
            style="@style/books_in_stock" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/sell_book"
        android:src="@drawable/sell_book"
        style="@style/sell_book" />
</LinearLayout>